src/index.css
body {
  margin: 0;
  background: #1a1a1a;
  padding: 0;
  font-family: -apple-system, Roboto;

  /* Disable text selection. */
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

img {
  /* Disable image selection. */
  pointer-events: none;
}

#root {
  display: flex;
  flex-direction: column;
  gap: 4px;
  margin: 0 auto;
  background: #ccccd4;
  max-width: 390px;
  min-height: 100vh;
}

@media (min-width: 768px) {
  #root {
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
  }
}

@media (max-width: 767px) {
  #root {
    max-width: 100%;
  }
}

